Map visibility fix, settings.py fix.

--- a/frontend/styles/_main.scss
+++ b/frontend/styles/_main.scss
@@ -18,6 +18,11 @@ header {
   display: inline-block;
 }
 
+.map-box {
+  height: 100vh;
+  width: 100%;
+}
+
 .navbar-brand {
   font-style: normal;
   font-weight: 600;
